--- a/vnext/Scripts/ReactWin32.nuspec
+++ b/vnext/Scripts/ReactWin32.nuspec
@@ -63,5 +63,6 @@
 
     <file src="$nugetroot$\Microsoft.ReactNative.Cxx\**" target ="Microsoft.ReactNative.Cxx"/>
 
+    <file src="$nugetroot$\natvis\Folly.natvis" target ="natvis\Folly.natvis"/>
   </files>
 </package>
