Optimize TurboModulesProvider to not performing unnecessary (Value*, size_t) <--> Array conversions

--- a/vnext/Microsoft.ReactNative.ComponentTests/Microsoft.ReactNative.ComponentTests.vcxproj
+++ b/vnext/Microsoft.ReactNative.ComponentTests/Microsoft.ReactNative.ComponentTests.vcxproj
@@ -180,6 +180,7 @@
   <Import Project="$(ReactNativeWindowsDir)\PropertySheets\ReactCommunity.cpp.props" />
   <ItemGroup>
     <ClCompile Include="DynamicReaderTest.cpp" />
+    <ClCompile Include="JsiArgumentReaderTest.cpp" />
     <ClCompile Include="JsiReaderTest.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="pch/pch.cpp">
