--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -58,6 +58,7 @@ jobs:
 
   - job: RnwNativeBuildDesktop
     displayName: Build Desktop
+    timeoutInMinutes: 120
     dependsOn: RnwNpmPublish
     strategy:
       matrix:
@@ -103,6 +104,7 @@ jobs:
             React.Windows.Desktop.Test.DLL\**
 
   - job: RnwNativeBuildUniversal
+    timeoutInMinutes: 120
     displayName: Build Universal
     dependsOn: RnwNpmPublish
     strategy:
