--- a/vnext/PropertySheets/WinUI.props
+++ b/vnext/PropertySheets/WinUI.props
@@ -5,9 +5,12 @@
   </PropertyGroup>
 
   <PropertyGroup Label="WinUI3 versioning">
+    <!-- This value is also used by the CLI, see \vnext\local-cli\generator-windows\index.js -->
+    <WinUI3Version>3.0.0-preview1.200515.3</WinUI3Version>
+
     <WinUIPackageName Condition="'$(UseWinUI3)'=='true'">Microsoft.WinUI</WinUIPackageName>
-    <WinUIPackageVersion Condition="'$(UseWinUI3)'=='true'">3.0.0-preview1.200515.3</WinUIPackageVersion>
-    <WinUIPackageProps  Condition="'$(UseWinUI3)'=='true'">$(WinUIPackageName).$(WinUIPackageVersion)\build\native\$(WinUIPackageName).props</WinUIPackageProps>
+    <WinUIPackageVersion Condition="'$(UseWinUI3)'=='true'">$(WinUI3Version)</WinUIPackageVersion>
+    <WinUIPackageProps Condition="'$(UseWinUI3)'=='true'">$(WinUIPackageName).$(WinUIPackageVersion)\build\native\$(WinUIPackageName).props</WinUIPackageProps>
 
     <WinUIPackageName Condition="'$(UseWinUI3)'!='true'">Microsoft.UI.Xaml</WinUIPackageName>
     <WinUIPackageVersion Condition="'$(UseWinUI3)'!='true'">2.3.191129002</WinUIPackageVersion>
@@ -29,7 +32,7 @@
     </Midl>
   </ItemDefinitionGroup>
 
-  <Target Name="PrintWinUIConfig" BeforeTargets="Midl;Build">
+  <Target Name="PrintWinUIConfig" BeforeTargets="Midl;Build;ResolveSDKReferences">
     <Message Text="UseWinUI3 = $(UseWinUI3)" />
     <Message Text="WinUIPackage = $(WinUIPackageName).$(WinUIPackageVersion)" />
   </Target>
