add WinUI3 init test to PR CI

--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -538,6 +538,16 @@ jobs:
         #  language: cs
         #  configuration: Release
         #  platform: arm64
+        WinUI3_X86DebugCpp:
+          language: cpp
+          configuration: Debug
+          platform: x86
+          additionalInitArguments: --useWinUI3
+        WinUI3_X86DebugCs:
+          language: cs
+          configuration: Debug
+          platform: x86
+          additionalInitArguments: --useWinUI3
 
     timeoutInMinutes: 40 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
