--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -502,10 +502,12 @@ jobs:
           language: cpp
           configuration: Release
           platform: x64
+          additionalInitArguments: 
         X64ReleaseCs:
           language: cs
           configuration: Release
           platform: x64
+          additionalInitArguments: 
         #ArmDebugCpp:
         #  language: cpp
         #  configuration: Debug
@@ -518,10 +520,12 @@ jobs:
           language: cpp
           configuration: Release
           platform: arm
+          additionalInitArguments: 
         ArmReleaseCs:
           language: cs
           configuration: Release
           platform: arm
+          additionalInitArguments: 
         #Arm64DebugCpp:
         #  language: cpp
         #  configuration: Debug
