--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -518,10 +518,12 @@ jobs:
           language: cpp
           configuration: Release
           platform: x64
+          additionalInitArguments: 
         X64ReleaseCs:
           language: cs
           configuration: Release
           platform: x64
+          additionalInitArguments: 
         #ArmDebugCpp:
         #  language: cpp
         #  configuration: Debug
@@ -534,10 +536,12 @@ jobs:
           language: cpp
           configuration: Release
           platform: arm
+          additionalInitArguments: 
         ArmReleaseCs:
           language: cs
           configuration: Release
           platform: arm
+          additionalInitArguments: 
         #Arm64DebugCpp:
         #  language: cpp
         #  configuration: Debug
@@ -554,6 +558,16 @@ jobs:
         #  language: cs
         #  configuration: Release
         #  platform: arm64
+        WinUI3_X86DebugCpp:
+          language: cpp
+          configuration: Debug
+          platform: x86
+          additionalInitArguments: --useWinUI3 true
+        WinUI3_X86DebugCs:
+          language: cs
+          configuration: Debug
+          platform: x86
+          additionalInitArguments: --useWinUI3 true
 
     timeoutInMinutes: 40 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
@@ -566,7 +580,7 @@ jobs:
           configuration: $(configuration)
           platform: $(platform)
           version: $(reactNativeVersion)
-          additionalInitArguments: $[ coalesce($(additionalInitArguments), '') ]
+          additionalInitArguments: $(additionalInitArguments)
 
   - job: CliInitExperimental
     displayName: Verify react-native init experimental
