--- a/vnext/package.json
+++ b/vnext/package.json
@@ -63,6 +63,7 @@
   },
   "beachball": {
     "defaultNpmTag": "latest",
+    "gitTags": true,
     "disallowedChangeTypes": [
       "major",
       "minor",
