--- a/vnext/package.json
+++ b/vnext/package.json
@@ -32,6 +32,7 @@
     "ora": "^3.4.0",
     "prop-types": "^15.7.2",
     "regenerator-runtime": "^0.13.2",
+    "semver": "^7.1.3",
     "shelljs": "^0.7.8",
     "username": "^5.1.0",
     "uuid": "^3.3.2",
