Ensure lib-commonjs is packaged into react-native-platform-override
Right now lic-commonjs isn't published in the public NPM package due to being in the gitignore. This makes it unusable outside of the repoo. Package only the entry-point and built libs.

--- a/packages/react-native-platform-override/package.json
+++ b/packages/react-native-platform-override/package.json
@@ -55,6 +55,10 @@
   "engines": {
     "node": ">=10"
   },
+  "files": [
+    "bin.js",
+    "lib-commonjs"
+  ],
   "beachball": {
     "disallowedChangeTypes": [
       "major"
