Squashed commit of the following:
commit 9375e93c9a640ef25fdce342e6f3649ca534b167
Merge: 60f2c44c5 dce9fe3ab
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Fri Jul 10 14:08:15 2020 -0700

    Merge branch 'master' into abi-safety

commit 60f2c44c54ee09e0e32e9d63838db98f0cff3266
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Fri Jul 10 14:07:09 2020 -0700

    add ReactDispatcher tests

commit e0e517c426000c209d822166995e45069e6d0dda
Merge: 6a358a6d3 d576f4566
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jul 9 23:06:52 2020 -0700

    Merge branch 'master' into abi-safety

commit 6a358a6d3adcb14c69bbe5e2e137503058574300
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jul 9 19:01:16 2020 -0700

    Change files

commit 2045e6a2ec82402579704589e74a6317b49e7a1c
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jul 9 18:59:47 2020 -0700

    add ReactPackageBuilder tests

commit 18cc8beadf14e74be7e05dc523849a14e7308383
Merge: 8ea8db53c 9db8df745
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jul 9 17:49:51 2020 -0700

    Merge branch 'master' into abi-safety

commit 8ea8db53c1ae6db0bf442edad3a9f6b5f2bc4c97
Merge: e04883ddc b2ac695a8
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jul 9 16:20:51 2020 -0700

    Merge branch 'master' into abi-safety

commit e04883ddcfbf16c0e4191917392618312316e9e2
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jul 9 16:19:06 2020 -0700

    add ReactModuleBuilder tests

commit d4c2575316752387d9f4dc77b60d4f8ecb2fbd76
Merge: 2940e1d3c f9f6f62c0
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jul 9 11:40:59 2020 -0700

    Merge branch 'master' into abi-safety

commit 2940e1d3c5e6e250279a41357b3cff98a9e6fc3d
Merge: a97c646c4 a3466aee6
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Wed Jul 8 18:52:02 2020 -0700

    Merge branch 'master' into abi-safety

commit a97c646c48f325645c99f8c78f376872b0c3309d
Author: Andreas Eulitz <aeulitz@micros

--- a/vnext/Desktop.ABITests/React.Windows.Desktop.ABITests.vcxproj.filters
+++ b/vnext/Desktop.ABITests/React.Windows.Desktop.ABITests.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="ReactPackageBuilderTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ReactDispatcherTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
